# chorus

./: Cargo.toml  README.md
src/: main.rs
src/gui/: mod.rs  settings.rs
src/instances/: mod.rs  new.rs
src/settings/: mod.rs
