[package]
name = "chorus"
version = "0.1.0-alpha"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/mikesk8r/chorus"

[dependencies]
base64ct = { version = "1.8.0", features = ["alloc"] }
eframe = "0.33.0"
egui = "0.33.0"
image = "0.25.8"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
